Revert "Fix nav spacing for older Safari (replace flex gap with margin)"
This reverts commit 0d04e874241196b3b08633695502af290d36b01f.

--- a/source/assets/css/common.css
+++ b/source/assets/css/common.css
@@ -2263,14 +2263,11 @@ main {
 .site-nav-list {
     display: flex;
     flex-wrap: nowrap;
+    gap: 20px;
     justify-content: center;
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-.site-nav-list li {
-    margin: 0 10px;
 }
 
 .footer-gradient {
